crates/parser/tests/snapshots/surface_parser_test__question_mark.snap
---
source: crates/parser/tests/surface_parser_test.rs
expression: module
---
decls:
  - DefFn:
      name: f
      visibility: Private
      params:
        - name: x
          ty:
            App:
              name: Option
              args:
                - Named:
                    name: Int
                    span:
                      - 16
                      - 19
              span:
                - 9
                - 20
          span:
            - 6
            - 20
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 25
            - 28
      body:
        QuestionMark:
          expr:
            Var:
              name: x
              span:
                - 31
                - 32
          span:
            - 31
            - 33
      span:
        - 0
        - 33
