crates/parser/tests/snapshots/surface_parser_test__record_type.snap
---
source: crates/parser/tests/surface_parser_test.rs
expression: module
---
decls:
  - DefType:
      name: Point
      visibility: Private
      type_params: []
      kind:
        Record:
          fields:
            - - x
              - Named:
                  name: Int
                  span:
                    - 18
                    - 21
            - - y
              - Named:
                  name: Int
                  span:
                    - 26
                    - 29
      deriving: []
      span:
        - 0
        - 31
