crates/parser/tests/snapshots/surface_parser_test__trait_decl.snap
---
source: crates/parser/tests/surface_parser_test.rs
expression: module
---
decls:
  - DefTrait:
      name: Eq
      type_var: a
      superclasses: []
      methods:
        - name: eq
          visibility: Private
          params:
            - name: self
              ty:
                Var:
                  name: a
                  span:
                    - 32
                    - 33
              span:
                - 26
                - 33
            - name: other
              ty:
                Var:
                  name: a
                  span:
                    - 42
                    - 43
              span:
                - 35
                - 43
          constraints: []
          return_type:
            Named:
              name: Bool
              span:
                - 48
                - 52
          body:
            Lit:
              value: Unit
              span:
                - 19
                - 52
          span:
            - 19
            - 52
      span:
        - 1
        - 54
