crates/parser/tests/snapshots/surface_parser_test__tuple_expr.snap
---
source: crates/parser/tests/surface_parser_test.rs
expression: module
---
decls:
  - DefFn:
      name: f
      visibility: Private
      params: []
      constraints: []
      return_type: ~
      body:
        Tuple:
          elements:
            - Lit:
                value:
                  Int: 1
                span:
                  - 11
                  - 12
            - Lit:
                value:
                  Int: 2
                span:
                  - 14
                  - 15
            - Lit:
                value:
                  Int: 3
                span:
                  - 17
                  - 18
          span:
            - 10
            - 19
      span:
        - 0
        - 19
