crates/parser/tests/snapshots/surface_parser_test__where_clause.snap
---
source: crates/parser/tests/surface_parser_test.rs
expression: module
---
decls:
  - DefFn:
      name: compare
      visibility: Private
      params:
        - name: a
          ty:
            Var:
              name: a
              span:
                - 15
                - 16
          span:
            - 12
            - 16
        - name: b
          ty:
            Var:
              name: a
              span:
                - 21
                - 22
          span:
            - 18
            - 22
      constraints:
        - type_var: a
          trait_name: Ord
          span:
            - 38
            - 44
      return_type:
        Named:
          name: Bool
          span:
            - 27
            - 31
      body:
        BinaryOp:
          op: Lt
          lhs:
            Var:
              name: a
              span:
                - 47
                - 48
          rhs:
            Var:
              name: b
              span:
                - 51
                - 52
          span:
            - 47
            - 52
      span:
        - 0
        - 52
